@@ -1,9 +1,9 @@
 SCRIPT_NAME=elf
 ELFSIZE=64
 OUTPUT_FORMAT="elf64-x86-64"
-TEXT_START_ADDR=0x1000
-MAXPAGESIZE=0x1000
-NONPAGED_TEXT_START_ADDR=0x1000
+TEXT_START_ADDR=0x400000
+MAXPAGESIZE=0x100000
+NONPAGED_TEXT_START_ADDR=0x400000
 ARCH=i386
 MACHINE=
 NOP=0x9090
